--- a/portfolio/Barbershop/app/scss/dop.scss
+++ b/portfolio/Barbershop/app/scss/dop.scss
@@ -8,7 +8,7 @@
     }
 }
 
-.bg_page_home {
+.bg_page_dop {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -26,14 +26,6 @@
             flex-flow: row wrap;
             align-items: center;
             justify-content: center;
-            .bg {
-                position: absolute;
-                z-index: 1;
-                width: 100%;
-                height: 100%;
-                background: url(../img/bg_logo.png) no-repeat center center;
-                background-size: contain;
-            }
             .top_section {
                 width: 100%;
                 position: relative;
