--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -43,6 +43,9 @@ html {
   background: #101011;
   min-width: 320px; }
 
+body {
+  overflow-x: hidden; }
+
 .content_site {
   height: 100%; }
 
@@ -62,6 +65,20 @@ body {
 
 p {
   margin: 0; }
+
+.bg_topgun {
+  position: absolute;
+  width: -webkit-calc(100% - 30px);
+  width: calc(100% - 30px);
+  z-index: 2;
+  height: 100%;
+  left: 15px; }
+  .bg_topgun .bg {
+    width: 100%;
+    height: 100%;
+    background: url(../img/bg_logo.png) no-repeat center center;
+    -webkit-background-size: contain;
+            background-size: contain; }
 
 .nav-btn {
   display: none;
@@ -152,7 +169,7 @@ p {
   position: absolute;
   width: 100%;
   top: 6.5em;
-  z-index: 3; }
+  z-index: 4; }
   #header .container .header_top {
     position: relative;
     display: -webkit-box;
@@ -205,7 +222,7 @@ p {
   -o-transition: .5s ease;
   transition: .5s ease;
   margin-top: 43.6em;
-  z-index: 3; }
+  z-index: 4; }
   #navigation ul {
     display: -webkit-box;
     display: -webkit-flex;
@@ -233,7 +250,7 @@ p {
   height: 100%;
   min-height: 100vh;
   position: relative;
-  z-index: 2; }
+  z-index: 3; }
   #contacts_tab .bg_all {
     position: absolute;
     z-index: 1;
@@ -249,14 +266,6 @@ p {
     height: 100%; }
     #contacts_tab .bg_tab .container {
       position: relative; }
-      #contacts_tab .bg_tab .container .bg {
-        position: absolute;
-        width: 105%;
-        left: -2.5%;
-        height: 100%;
-        background: url(../img/bg_logo.png) no-repeat center center;
-        -webkit-background-size: contain;
-                background-size: contain; }
   #contacts_tab .bg_portret {
     position: absolute;
     z-index: 3;
@@ -347,6 +356,13 @@ p {
         color: #c6c6c6;
         padding: 0 1em;
         text-align: center; }
+
+@media screen and (min-width: 1400px) {
+  .bg_topgun .bg {
+    width: 1370px;
+    margin: 0 auto; }
+  .bg_page_other .txt_bg .invest .bg .bg_content {
+    width: 1370px !important; } }
 
 @media screen and (max-width: 1200px) {
   .container {
