--- a/portfolio/Barbershop/app/css/dop.css
+++ b/portfolio/Barbershop/app/css/dop.css
@@ -6,7 +6,7 @@
     height: 100vh;
     min-height: 624px; }
 
-.bg_page_home {
+.bg_page_dop {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -36,14 +36,6 @@
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center; }
-    #dop .container .dop_page .bg {
-      position: absolute;
-      z-index: 1;
-      width: 100%;
-      height: 100%;
-      background: url(../img/bg_logo.png) no-repeat center center;
-      -webkit-background-size: contain;
-              background-size: contain; }
     #dop .container .dop_page .top_section {
       width: 100%;
       position: relative;
