--- a/portfolio/Barbershop/app/css/invest.css
+++ b/portfolio/Barbershop/app/css/invest.css
@@ -61,29 +61,6 @@
         height: 100%;
         top: 30%;
         z-index: 2; }
-      #invest .container .invest_page .bg .bg_invest {
-        position: absolute;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-            -ms-flex-pack: center;
-                justify-content: center;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-            -ms-flex-align: center;
-                align-items: center;
-        width: 100%;
-        top: 30%;
-        margin-top: -50em;
-        z-index: 1; }
-        #invest .container .invest_page .bg .bg_invest p {
-          font: 103em "BebasNeueBold";
-          color: #fff;
-          opacity: 0.1;
-          letter-spacing: -0.05em; }
   #invest .container .content {
     position: relative;
     z-index: 2;
@@ -194,7 +171,7 @@
           color: #fff; }
         #invest .container .content .right_section .bottom_item .number {
           font: 8em "BebasNeueRegular";
-          letter-spacing: 0.05em;
+          letter-spacing: 0.11em;
           color: #464646;
           text-align: right;
           display: -webkit-box;
@@ -284,6 +261,8 @@
 @media screen and (max-width: 567px) {
   body {
     height: 100%; }
+  .bg_page_other .txt_bg .invest .bg {
+    display: none; }
   #invest .container .content .center_section .center_item p .last {
     padding-top: 0.05em; } }
 
@@ -295,4 +274,6 @@
   #invest .container .content .left_section .top_item {
     margin-left: 0; }
   #invest .container .content {
-    font-size: 1.4em; } }
+    font-size: 1.4em; }
+  .bg_page_other .txt_bg .invest p {
+    font-size: 80em; } }
