--- a/portfolio/Barbershop/app/css/main.css
+++ b/portfolio/Barbershop/app/css/main.css
@@ -21,6 +21,116 @@
   background: url(../img/bg_moscov.jpg) no-repeat center center;
   -webkit-background-size: cover;
           background-size: cover; }
+  .bg_page_other .txt_bg {
+    height: 100%; }
+    .bg_page_other .txt_bg .msk {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      height: 100%; }
+      .bg_page_other .txt_bg .msk p {
+        font: 60em "BebasNeueBold";
+        color: #fff;
+        opacity: 0.1;
+        padding-bottom: 1.7em; }
+    .bg_page_other .txt_bg .spb {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      height: 100%; }
+      .bg_page_other .txt_bg .spb p {
+        font: 46.3em "BebasNeueBold";
+        color: #fff;
+        opacity: 0.1;
+        padding-bottom: 2em; }
+    .bg_page_other .txt_bg .reg {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      height: 100%; }
+      .bg_page_other .txt_bg .reg p {
+        font: 56em "BebasNeueBold";
+        color: #fff;
+        opacity: 0.1;
+        padding-top: 0.3em;
+        padding-bottom: 1.9em; }
+    .bg_page_other .txt_bg .invest {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      height: 100%;
+      position: relative; }
+      .bg_page_other .txt_bg .invest p {
+        font: 103em "BebasNeueBold";
+        position: relative;
+        z-index: 2;
+        color: #fff;
+        opacity: 0.1;
+        letter-spacing: -0.05em;
+        padding-bottom: 0.7em; }
+      .bg_page_other .txt_bg .invest .bg {
+        position: absolute;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        overflow: hidden; }
+        .bg_page_other .txt_bg .invest .bg .bg_content {
+          background: url(../img/invest_bg.png) no-repeat center center;
+          -webkit-background-size: contain;
+                  background-size: contain;
+          height: 100%;
+          width: 100%;
+          margin: 0 auto;
+          position: absolute;
+          top: 60em; }
 
 #home .container {
   position: relative; }
@@ -29,14 +139,6 @@
     #home .container .tab_content .home_page {
       height: 100%;
       position: relative; }
-      #home .container .tab_content .home_page .bg_tab {
-        position: absolute;
-        z-index: 1;
-        width: 100%;
-        height: 100%;
-        background: url(../img/bg_logo.png) no-repeat center center;
-        -webkit-background-size: contain;
-                background-size: contain; }
       #home .container .tab_content .home_page .tab_content_block {
         position: relative;
         z-index: 2;
@@ -84,42 +186,6 @@
     #home .container .tab_content .reg_page {
       height: 100%;
       position: relative; }
-      #home .container .tab_content .moscow_page .bg_city,
-      #home .container .tab_content .spb_page .bg_city,
-      #home .container .tab_content .reg_page .bg_city {
-        position: absolute;
-        z-index: 1;
-        width: 100%;
-        height: 100%;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-            -ms-flex-align: center;
-                align-items: center;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-            -ms-flex-pack: center;
-                justify-content: center; }
-        #home .container .tab_content .moscow_page .bg_city p,
-        #home .container .tab_content .spb_page .bg_city p,
-        #home .container .tab_content .reg_page .bg_city p {
-          font: 75em "BebasNeueBold";
-          color: #fff;
-          opacity: 0.1;
-          padding-bottom: 1.3em; }
-      #home .container .tab_content .moscow_page .bg_tab,
-      #home .container .tab_content .spb_page .bg_tab,
-      #home .container .tab_content .reg_page .bg_tab {
-        position: absolute;
-        z-index: 2;
-        width: 100%;
-        height: 100%;
-        background: url(../img/bg_logo.png) no-repeat center center;
-        -webkit-background-size: contain;
-                background-size: contain; }
       #home .container .tab_content .moscow_page .tab_content_block,
       #home .container .tab_content .spb_page .tab_content_block,
       #home .container .tab_content .reg_page .tab_content_block {
@@ -292,12 +358,6 @@
               -webkit-justify-content: flex-end;
                   -ms-flex-pack: end;
                       justify-content: flex-end; }
-    #home .container .tab_content .spb_page .bg_city p {
-      font: 46.3em "BebasNeueBold";
-      color: #fff;
-      opacity: 0.1;
-      padding-top: 0.3em;
-      padding-bottom: 2em; }
     #home .container .tab_content .reg_page .tab_content_block .number {
       -webkit-box-pack: justify !important;
       -webkit-justify-content: space-between !important;
@@ -323,12 +383,6 @@
         -webkit-justify-content: flex-end !important;
             -ms-flex-pack: end !important;
                 justify-content: flex-end !important; }
-    #home .container .tab_content .reg_page .bg_city p {
-      font: 56em "BebasNeueBold";
-      color: #fff;
-      opacity: 0.1;
-      padding-top: 0.3em;
-      padding-bottom: 1.9em; }
     #home .container .tab_content .reg_page .tab_content_block h2 {
       font: 19.5em "BebasNeueBold";
       color: #fff;
@@ -414,6 +468,9 @@
 @media screen and (max-width: 567px) {
   #home .container {
     min-height: 568px; }
+  .bg_page_other .txt_bg .spb p {
+    font-size: 27em;
+    padding-bottom: 3em; }
   #home .container .tab_content .moscow_page .tab_content_block .number,
   #home .container .tab_content .spb_page .tab_content_block .number,
   #home .container .tab_content .reg_page .tab_content_block .number {
