--- a/portfolio/Barbershop/app/scss/_media.scss
+++ b/portfolio/Barbershop/app/scss/_media.scss
@@ -1,4 +1,12 @@
-
+@media screen and (min-width: 1400px) {
+	.bg_topgun .bg {
+		width: 1370px;
+		margin: 0 auto;
+	}
+	.bg_page_other .txt_bg .invest .bg .bg_content {
+		width: 1370px !important;
+	}
+}
 // ≥1200px
 @media screen and (max-width: 1200px) {
 	 .container {
