--- a/portfolio/Barbershop/app/scss/common.scss
+++ b/portfolio/Barbershop/app/scss/common.scss
@@ -11,6 +11,10 @@ html {
     min-width: 320px;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .content_site {
     height: 100%;
 }
@@ -35,6 +39,20 @@ body {
 
 p {
     margin: 0;
+}
+
+.bg_topgun {
+    position: absolute;
+    width: calc(100% - 30px);
+    z-index: 2; 
+    height: 100%;
+    left: 15px;
+    .bg {
+        width: 100%;
+        height: 100%;
+    background: url(../img/bg_logo.png) no-repeat center center;
+    background-size: contain;
+    }
 }
 
 .nav-btn {
@@ -124,7 +142,7 @@ p {
     position: absolute;
     width: 100%;
     top: 6.5em;
-    z-index: 3;
+    z-index: 4;
     .container {
         .header_top {
             position: relative;
@@ -168,7 +186,7 @@ p {
     width: 100%;
     transition: .5s ease;
     margin-top: 43.6em;
-    z-index: 3;
+    z-index: 4;
     ul {
         display: flex;
         padding: 0;
@@ -201,7 +219,7 @@ p {
     height: 100%;
     min-height: 100vh;
     position: relative;
-    z-index: 2;
+    z-index: 3;
     .bg_all {
     	position: absolute;
         z-index: 1;
@@ -217,14 +235,6 @@ p {
         height: 100%;
         .container {
         	position: relative;
-            .bg {
-            	position: absolute;
-                width: 105%;
-                left: -2.5%;
-                height: 100%;
-                background: url(../img/bg_logo.png) no-repeat center center;
-                background-size: contain;
-            }
         }
     }
     .bg_portret {
