--- a/portfolio/Barbershop/app/scss/projects.scss
+++ b/portfolio/Barbershop/app/scss/projects.scss
@@ -241,8 +241,8 @@
     #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block {
         width: 35%;
     }
-    #projects .container .home_page_projects .page_content .bottom_projects {
-        margin-top: 100em;
+    #projects .container .home_page_projects .page_content .center_block {
+        padding-bottom: 100em;
     }
 }
 
