--- a/portfolio/Barbershop/app/css/projects.css
+++ b/portfolio/Barbershop/app/css/projects.css
@@ -234,5 +234,5 @@
     padding-bottom: 5em; }
   #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block {
     width: 35%; }
-  #projects .container .home_page_projects .page_content .bottom_projects {
-    margin-top: 100em; } }
+  #projects .container .home_page_projects .page_content .center_block {
+    padding-bottom: 100em; } }
