--- a/portfolio/Barbershop/app/css/projects.css
+++ b/portfolio/Barbershop/app/css/projects.css
@@ -10,56 +10,105 @@
   position: relative; }
   #projects .container .home_page_projects {
     height: 100%;
-    position: relative; }
-    #projects .container .home_page_projects .page_content {
-      position: relative;
-      z-index: 2;
-      height: 100%;
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    #projects .container .home_page_projects .footer {
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-          -ms-flex-align: center;
-              align-items: center; }
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      position: absolute;
+      bottom: 5em;
+      padding-top: 5em;
+      width: 100%; }
+      #projects .container .home_page_projects .footer p {
+        font: 3.7em "RobotoRegular";
+        color: #c6c6c6;
+        padding: 0 1em;
+        text-align: center; }
+    #projects .container .home_page_projects .page_content {
+      position: relative;
+      margin-top: 55em;
+      z-index: 2;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
       #projects .container .home_page_projects .page_content .center_block {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        width: 100%; }
+        width: 100%;
+        position: absolute;
+        top: 0;
+        z-index: 2; }
         #projects .container .home_page_projects .page_content .center_block .img {
-          position: relative;
-          margin: 0 auto; }
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: center;
+          -webkit-justify-content: center;
+              -ms-flex-pack: center;
+                  justify-content: center; }
           #projects .container .home_page_projects .page_content .center_block .img .img_box {
             position: relative;
             width: 65em;
-            height: 65em;
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-align: center;
-            -webkit-align-items: center;
-                -ms-flex-align: center;
-                    align-items: center; }
-            #projects .container .home_page_projects .page_content .center_block .img .img_box .shadow {
+            height: 65em; }
+            #projects .container .home_page_projects .page_content .center_block .img .img_box .txt {
               position: absolute;
-              height: 0em;
-              width: 0em;
-              z-index: 1;
-              top: 50%;
-              left: 50%;
-              -webkit-box-shadow: 0px 0px 80em 20em rgba(235, 230, 235, 0.7);
-                      box-shadow: 0px 0px 80em 20em rgba(235, 230, 235, 0.7); }
-            #projects .container .home_page_projects .page_content .center_block .img .img_box img {
-              position: relative;
-              z-index: 2;
-              width: 100%;
-              height: auto; }
+              right: -120em;
+              top: 40%; }
+              #projects .container .home_page_projects .page_content .center_block .img .img_box .txt p {
+                font: 3.7em "RobotoCondensed";
+                color: #fff;
+                line-height: 180%; }
+              #projects .container .home_page_projects .page_content .center_block .img .img_box .txt .second {
+                letter-spacing: 0.078em; }
+            #projects .container .home_page_projects .page_content .center_block .img .img_box .img_content {
+              width: 65em;
+              height: 65em;
+              display: -webkit-box;
+              display: -webkit-flex;
+              display: -ms-flexbox;
+              display: flex;
+              -webkit-box-align: center;
+              -webkit-align-items: center;
+                  -ms-flex-align: center;
+                      align-items: center;
+              position: relative; }
+              #projects .container .home_page_projects .page_content .center_block .img .img_box .img_content img {
+                position: relative;
+                z-index: 2;
+                width: 100%;
+                height: auto; }
+              #projects .container .home_page_projects .page_content .center_block .img .img_box .img_content .shadow {
+                position: absolute;
+                height: 0em;
+                width: 0em;
+                z-index: 1;
+                top: 50%;
+                left: 50%;
+                -webkit-box-shadow: 0px 0px 80em 20em rgba(235, 230, 235, 0.7);
+                        box-shadow: 0px 0px 80em 20em rgba(235, 230, 235, 0.7); }
           #projects .container .home_page_projects .page_content .center_block .img .first_logo {
-            overflow: hidden;
             position: relative;
             width: 65em;
             height: 65em;
@@ -71,20 +120,14 @@
               position: absolute;
               width: 100%;
               top: -8.5em; }
-          #projects .container .home_page_projects .page_content .center_block .img .txt {
-            position: absolute;
-            right: -120em;
-            top: 40%; }
-            #projects .container .home_page_projects .page_content .center_block .img .txt p {
-              font: 3.7em "RobotoCondensed";
-              color: #fff;
-              line-height: 180%; }
-            #projects .container .home_page_projects .page_content .center_block .img .txt .second {
-              letter-spacing: 0.078em; }
       #projects .container .home_page_projects .page_content .bottom_projects {
-        position: absolute;
-        bottom: 12em;
-        width: 100%; }
+        -webkit-transition: 0.3s ease;
+        -o-transition: 0.3s ease;
+        transition: 0.3s ease;
+        width: 100%;
+        -webkit-transform: translateY(-15em);
+            -ms-transform: translateY(-15em);
+                transform: translateY(-15em); }
         #projects .container .home_page_projects .page_content .bottom_projects .projects_content {
           display: -webkit-box;
           display: -webkit-flex;
@@ -120,91 +163,62 @@
             opacity: 1; }
           #projects .container .home_page_projects .page_content .bottom_projects .projects_content .active p {
             color: #fff; }
-      #projects .container .home_page_projects .page_content .footer {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-            -ms-flex-pack: center;
-                justify-content: center;
-        position: absolute;
-        bottom: 5em;
-        padding-top: 5em;
-        width: 100%; }
-        #projects .container .home_page_projects .page_content .footer p {
-          font: 3.7em "RobotoRegular";
-          color: #c6c6c6;
-          padding: 0 1em;
-          text-align: center; }
+      #projects .container .home_page_projects .page_content .bottom_active {
+        padding-top: 90em; }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1023px) {
   #projects .container {
-    min-height: 850px; }
-  #projects .container .home_page_projects .bg {
-    width: 95%;
-    left: 2.5%; }
+    min-height: 1074px; }
   #projects .container .home_page_projects .page_content .bottom_projects .projects_content {
-    font-size: 4px;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between; }
-  #projects .container .home_page_projects .page_content {
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-        -ms-flex-align: start;
-            align-items: flex-start; }
+    font-size: 2em;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  #projects .container .home_page_projects .page_content .bottom_active {
+    padding-top: 85em; }
   #projects .container .home_page_projects .page_content .bottom_projects {
-    position: relative; }
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0); }
+  #projects .container .home_page_projects {
+    height: 100%; }
   #projects .container .home_page_projects .page_content {
+    margin-top: 65em;
+    padding-bottom: 24em; }
+  #projects .container .home_page_projects .page_content .center_block .img .img_box {
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-  #projects .container .home_page_projects .page_content .center_block .img .txt {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  #projects .container .home_page_projects .page_content .center_block .img .img_box .txt {
     position: relative;
+    right: 0;
     top: 0;
-    right: 0; }
-  #projects .container .home_page_projects .page_content .center_block .img .img_box {
-    margin: 0 auto; }
-  #projects .container .home_page_projects .page_content .center_block .img .txt {
-    padding-top: 2em; }
-  #projects .container .home_page_projects .page_content .center_block {
-    margin-bottom: 20em;
-    margin-top: 40em; }
-  #projects .container .home_page_projects .page_content .center_block .img .txt {
-    padding-top: 10em; } }
+    padding-top: 35em; }
+  #projects .container .home_page_projects .page_content {
+    margin-top: 100em; } }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
   #projects .container {
-    min-height: 1006px; }
-  #projects .container .home_page_projects .bg {
-    display: none; }
-  #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block {
-    margin: 2em 4.5em; }
-  #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block {
-    width: 25%; }
-  #projects .container .home_page_projects .page_content .bottom_projects .projects_content {
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-  #projects .container .home_page .page_content .bottom_projects .projects_content .block img {
-    max-width: 100%; }
-  #projects .container .home_page .page_content .center_block {
-    margin-bottom: 40em;
-    margin-top: 70em; } }
+    min-height: 874px; } }
 
 @media screen and (max-width: 567px) {
   #projects .container {
-    min-height: 1200px; }
+    height: auto;
+    min-height: 100vh; }
+  #projects .container .home_page_projects .page_content {
+    margin-top: 20em; }
   body {
     height: auto; }
   #projects .container .home_page_projects .page_content .center_block .img .txt {
@@ -217,22 +231,23 @@
     margin-bottom: 30em; }
   #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block {
     width: 40%; }
-  #projects .container .home_page_projects .page_content .footer {
+  #projects .container .home_page_projects .footer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column; }
-  #projects .container .home_page .page_content .footer p {
-    font-size: 4em; } }
+  #projects .container .home_page_projects .footer p {
+    font-size: 4em; }
+  #projects .container .home_page_projects .page_content {
+    margin-top: 100em; }
+  #projects .container .home_page_projects .page_content .center_block {
+    margin-top: 0; }
+  #projects .container .home_page_projects .page_content .bottom_active {
+    padding-top: 100em; } }
 
 @media screen and (max-width: 480px) {
-  #contacts_tab .bg_portret {
-    width: 130em;
-    height: 130em; }
   #contacts_tab .container .bottom_block .second {
     padding-bottom: 5em; }
   #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block {
-    width: 35%; }
-  #projects .container .home_page_projects .page_content .center_block {
-    padding-bottom: 100em; } }
+    width: 35%; } }
