--- a/portfolio/Barbershop/app/scss/projects.scss
+++ b/portfolio/Barbershop/app/scss/projects.scss
@@ -14,54 +14,42 @@
         .home_page_projects {
             height: 100%;
             position: relative;
+            display: flex;
+            align-items: center;
+            .footer {
+                    display: flex;
+                    justify-content: center;
+                    position: absolute;
+                    bottom: 5em;
+                    padding-top: 5em;
+                    width: 100%;
+                    p {
+                        font: 3.7em "RobotoRegular";
+                        color: #c6c6c6;
+                        padding: 0 1em;
+                        text-align: center;
+                    }
+                }
             .page_content {
                 position: relative;
+                margin-top: 55em;
                 z-index: 2;
-                height: 100%;
                 display: flex;
-                align-items: center;
+                flex-direction: column;
+                justify-content: center;
                 .center_block {
-                    display: flex;
                     width: 100%;
+                    position: absolute;
+                    top: 0;
+                    z-index: 2;
                     .img {
-                        position: relative;
-                        margin: 0 auto;
+                         display: flex;
+                         justify-content: center;
                          .img_box {
                          	position: relative;
                          	width: 65em;
                          	height: 65em;
-                         	display: flex;
-                         	align-items: center;
-                         	.shadow {
-                         		position: absolute;
-                         		height: 0em;
-                         		width: 0em;
-                         		z-index: 1;
-                         		top: 50%;
-                         		left: 50%;
-                         		box-shadow: 0px 0px 80em 20em rgba(235, 230, 235, 0.7);
-                         	}
-                        	   img {
-                                position: relative;
-                                z-index: 2;
-                                 width: 100%;
-                                 height: auto;
-                        	   }
-                        }
-                        .first_logo {
-                            overflow: hidden;
-                            position: relative;
-                            width: 65em;
-                            height: 65em;
-                            border-radius: 50%;
-                            box-shadow: 0px 0px 80em -20px rgba(235, 230, 235, 0.7);
-                            img {
-                                position: absolute;
-                                width: 100%;
-                                top: -8.5em;
-                            }
-                        }
-                        .txt {
+                            .txt {
                             position: absolute;
                             right: -120em;
                             top: 40%;
@@ -74,12 +62,48 @@
                                 letter-spacing: 0.078em;
                             }
                         }
+                        
+                        	   .img_content {
+                                width: 65em;
+                                height: 65em;
+                                display: flex;
+                                align-items: center;
+                                position: relative;
+                                img {
+                                position: relative;
+                                z-index: 2;
+                                 width: 100%;
+                                 height: auto;
+                               }
+                               .shadow {
+                                position: absolute;
+                                height: 0em;
+                                width: 0em;
+                                z-index: 1;
+                                top: 50%;
+                                left: 50%;
+                                box-shadow: 0px 0px 80em 20em rgba(235, 230, 235, 0.7);
+                            }
+                               }
+                        }
+                        .first_logo {
+                            position: relative;
+                            width: 65em;
+                            height: 65em;
+                            border-radius: 50%;
+                            box-shadow: 0px 0px 80em -20px rgba(235, 230, 235, 0.7);
+                            img {
+                                position: absolute;
+                                width: 100%;
+                                top: -8.5em;
+                            }
+                        }
                     }
                 }
                 .bottom_projects {
-                    position: absolute;
-                    bottom: 12em;
+                    transition: 0.3s ease;
                     width: 100%;
+                    transform: translateY(-15em);
                     .projects_content {
                         display: flex;
                         flex-flow: row wrap;
@@ -114,19 +138,8 @@
                         }
                     }
                 }
-                .footer {
-                    display: flex;
-                    justify-content: center;
-                    position: absolute;
-                    bottom: 5em;
-                    padding-top: 5em;
-                    width: 100%;
-                    p {
-                        font: 3.7em "RobotoRegular";
-                        color: #c6c6c6;
-                        padding: 0 1em;
-                        text-align: center;
-                    }
+                .bottom_active {
+                     padding-top: 90em;
                 }
             }
         }
@@ -134,77 +147,61 @@
 }
 
 @media screen and (max-width: 1200px) {
-    #projects .container {
-        min-height: 850px;
-    }
-    #projects .container .home_page_projects .bg {
-        width: 95%;
-        left: 2.5%;
-    }
-    #projects .container .home_page_projects .page_content .bottom_projects .projects_content {
-        font-size: 4px;
-        justify-content: space-between;
-    }
-    #projects .container .home_page_projects .page_content {
-        align-items: flex-start;
-    }
-
-    #projects .container .home_page_projects .page_content .bottom_projects {
-        position: relative;
-    }
-    #projects .container .home_page_projects .page_content {
-        flex-direction: column;
-        justify-content: center;
-    }
-    #projects .container .home_page_projects .page_content .center_block .img .txt {
-        position: relative;
-        top: 0;
-        right: 0;
-    }
-    #projects .container .home_page_projects .page_content .center_block .img .img_box {
-        margin: 0 auto;
-    }
-    #projects .container .home_page_projects .page_content .center_block .img .txt {
-        padding-top: 2em;
-    }
-    #projects .container .home_page_projects .page_content .center_block {
-        margin-bottom: 20em;
-        margin-top: 40em;
-    }
-    #projects .container .home_page_projects .page_content .center_block .img .txt {  
-    padding-top: 10em;
-    }
 }
 
 @media screen and (max-width: 1023px) {
     #projects .container {
-        min-height: 1006px;
-    }
-    #projects .container .home_page_projects .bg {
-        display: none;
-    }
-    #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block {
-        margin: 2em 4.5em;
-    }
-    #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block {
-        width: 25%;
+        min-height: 1074px;
     }
     #projects .container .home_page_projects .page_content .bottom_projects .projects_content {
+        font-size: 2em;
         justify-content: center;
     }
-    #projects .container .home_page .page_content .bottom_projects .projects_content .block img {
-        max-width: 100%;
+    #projects .container .home_page_projects .page_content .bottom_active {
+        padding-top: 85em;
     }
-    #projects .container .home_page .page_content .center_block {
-        margin-bottom: 40em;
-        margin-top: 70em;
+    #projects .container .home_page_projects .page_content .bottom_projects {
+        transform: translateY(0);
+    }
+    #projects .container .home_page_projects {
+         height: 100%;
+    }
+    #projects .container .home_page_projects .page_content {
+        margin-top: 65em;
+        padding-bottom: 24em;
+    }
+    #projects .container .home_page_projects .page_content .center_block .img .img_box {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #projects .container .home_page_projects .page_content .center_block .img .img_box .txt {
+        position: relative;
+        right: 0;
+        top: 0;
+        padding-top: 35em;
+    }
+    #projects .container .home_page_projects .page_content {
+        margin-top: 100em;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    #projects .container {
+        min-height: 874px;
     }
 }
 
 @media screen and (max-width: 567px) {
     #projects .container {
-        min-height: 1200px;
+        height: auto;
+        min-height: 100vh;
     }
+    #projects .container .home_page_projects .page_content {
+        margin-top: 20em;
+    }
+    #projects .container .home_page_projects .page_content {}
     body {
         height: auto;
     }
@@ -222,27 +219,29 @@
     #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block {
         width: 40%;
     }
-    #projects .container .home_page_projects .page_content .footer {
+    #projects .container .home_page_projects .footer {
         flex-direction: column;
     }
-    #projects .container .home_page .page_content .footer p {
+    #projects .container .home_page_projects .footer p {
         font-size: 4em;
+    }
+    #projects .container .home_page_projects .page_content {
+        margin-top: 100em;
+    }
+    #projects .container .home_page_projects .page_content .center_block {
+        margin-top: 0;
+    }
+    #projects .container .home_page_projects .page_content .bottom_active {
+        padding-top: 100em;
     }
 }
 
 @media screen and (max-width: 480px) {
-    #contacts_tab .bg_portret {
-        width: 130em;
-        height: 130em;
-    }
     #contacts_tab .container .bottom_block .second {
         padding-bottom: 5em;
     }
     #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block {
         width: 35%;
-    }
-    #projects .container .home_page_projects .page_content .center_block {
-        padding-bottom: 100em;
     }
 }
 
