--- a/portfolio/CSA/app/scss/libs.scss
+++ b/portfolio/CSA/app/scss/libs.scss
@@ -1,1 +1,3 @@
 @import "../libs/_reboot.scss";
+@import "../libs/slick-1.8.1/slick/slick.scss";
+@import "../libs/slick-1.8.1/slick/slick-theme.scss";
