--- a/portfolio/CSA/app/scss/start.scss
+++ b/portfolio/CSA/app/scss/start.scss
@@ -9,8 +9,8 @@
         overflow-x: hidden;
     }
     .block_logo {
-        width: 100%;
-        height: 50%;
+        width: 400px;
+        height: 400px;
         .logo_content {
                position: relative;
                height: 100%;
